--- a/src/pages/Dashboard/DashboardPage.css
+++ b/src/pages/Dashboard/DashboardPage.css
@@ -6,7 +6,7 @@
 
 .order-details {
   flex-grow: 1;
-  padding: 10px;
+  /* padding: 10px; */
   overflow: auto;
 }
 
